[package]
name = "cargo-bug"
version = "0.1.0"
authors = ["Aphek <bilkow@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.3.1"
tokio = { version = "1.9", features = ["full"] }
# hyper = "0.14"
